# barIO

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.alpine  Dockerfile.check  env.sample
src/: main.rs
src/manipulation/: cos.rs  data.rs  franz_producer.rs  mod.rs  process.rs  redis.rs
