[package]
name = "barIO"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.5"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0.125", features = ["derive"] }
dotenv = "0.15.0"
bytes = "1.3.0"